# hiemal

./: CMakeLists.txt  LICENSE
.github/workflows/: run_tests.yml
cmake/: cmake_info.h.in
docs/man/: hminfo.1
examples/: device_io.c
src/core/: CMakeLists.txt  backend.c  buffer.c  common.c  device.c  event_unix.c  format.c  logging.c  math.c  pulse.c  stream.c
src/core/include/api/: backend.h  buffer.h  device.h  stream.h
src/core/include/intern/: backend.h  common.h  device.h  event.h  format.h  logging.h  math.h  python.h  thread.h
src/core/include/util/: time.h
src/core/ops/: ops.c.in  ops.h.in  ops.json  ops_internal.h.in  ops_python.c.in  ops_python.h.in
src/core/ops/dsp/: filter.c
src/core/ops/sink/: file.c  io_device.c
src/core/ops/source/: file.c  io_device.c
src/core/ops/util/: gen_ops.py
src/python/: CMakeLists.txt
src/python/hiemal/: CMakeLists.txt  __init__.py  format.py
src/python/hiemal/_c/: CMakeLists.txt
src/python/hiemal/_c/src/: backend.c  buffer.c  device.c  format.c  module.c
src/util/: CMakeLists.txt  time.c
src/utils/: hminfo.c
test/: test_common.c  test_event.c  test_op_filter.c  test_pulse.c
test/python/: test_opsgen.py
